# gripper_design_optimization

./: .gitignore  .project  DIRresults.txt  MUJOCO_LOG.TXT  README.md  TRINA_BO.py  TRINA_acbo.py  TRINA_world.xml  actor_critic.py  cleanup_zherong.sh  codesign.py  commit.sh  commit_zherong.sh  compile_gripper.py  compile_objects.py  compile_world.py  controller.py  controller_canonical.py  controller_cup.py  dataset_canonical.py  dataset_cup.py  design_space.py  gaussian_process_scaled.py  gl_vis.py  gripper_acbo_run.py  gripper_bilevel_run.py  gripper_codesign.py  gripper_multi_objective_BO_run.py  gripper_problem_BO.py  gripper_problem_BO_canonical.py  gripper_single_objective_BO_run.py  heuristics.py  hv.py  metric.py  mobbo.py  mpl_ex.py  multi_objective_ACBO_GPUCB.py  multi_objective_BO_GPUCB.py  multi_objective_bilevel.py  object_sim_test.py  (+11 more)
BoundingBox/: pareto_comparison.py
GraspMetric/: CMakeLists.txt  mainDebugSupport.cpp  mainMetric.cpp  mainPyMetric.cpp  pyGraspMetric.cpp  setup.py
GraspMetric/GraspMetric/: CholmodInterface.cpp  CholmodInterface.h  ConvexHull.cpp  ConvexHull.h  CrossSpatialUtil.h  DebugGradient.cpp  DebugGradient.h  DeformableBody.cpp  DeformableBody.h  EigenInterface.cpp  EigenInterface.h  GraspMesh.cpp  GraspMesh.h  GraspVolumeConvex.cpp  GraspVolumeMesh.cpp  GraspVolumeMesh.h  Metric.cpp  Metric.h  MosekInterface.cpp  MosekInterface.h  Objective.h  RigidBodyMass.cpp  RigidBodyMass.h  RotationUtil.h  ScsInterface.cpp  ScsInterface.h  SparseUtils.cpp  SparseUtils.h  SpatialRotationUtil.h  Support.cpp  Support.h  SupportCutSDP.cpp  SupportMosek.cpp  SupportSCS.cpp  UmfpackInterface.cpp  UmfpackInterface.h  Utils.cpp  Utils.h  pyGraspMetric.h  pyGraspMetricImpl.cpp
GraspMetric/cmake/: FindCholmod.cmake  FindMPFR.cmake  FindQHull.cmake  FindSuperLU.cmake  FindUmfpack.cmake  LoadLibs.cmake
Simulation/: computeQ1UpperBound.py  create_design.py  directions.py  gl_vis.py  grasp_sim.py  moving_base.py  utils.py
Simulation/robots/box_finger/: curb_finger4.off  finger.rob
deprecated/: box_robot_floating.xml  create_design.py
deprecated/robots/RobotiQ/: finger.rob  palm0.off
deprecated/terrains/: plane.off
